--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -2817,6 +2817,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sweep mit Adam Optimizer und L2 Regularisierung sowie Dropout"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2939,6 +2947,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Erste Erkentniss von Adam Optimizer\n",
+    "\n",
     "Parallel Coordinate Plot mit Adam Optimizer ohne Batchnorm und mit/ohne Regularisierung\n",
     "\n",
     "![image.png](attachment:image.png)\n",
@@ -2948,6 +2958,14 @@
     "Wir fuehren einen weiteren Run durch und schauen uns nur noch diesmal die Runs mit dem Adam Optimizer an sowie unterschiedlichen Learning Rates im Range von \n",
     "0.01 bis 0.00001.\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sweep mit Adam Optimizer und unterschiedlichen (tieferen) Learning Rates sowie unterschiedliche L2 Regularisierung und Dropout"
    ]
   },
   {
@@ -2965,8 +2983,8 @@
     "    },\n",
     "    'parameters': {\n",
     "        'lr': {\n",
-    "            'min': 0.0001,\n",
-    "            'max': 0.1\n",
+    "            'min': 0.00001,\n",
+    "            'max': 0.01\n",
     "        },\n",
     "        'batch_size': {\n",
     "            'values': [64]\n",
@@ -2975,7 +2993,7 @@
     "            'values': [30]\n",
     "        },\n",
     "        'model': {\n",
-    "            'values': ['CNN_5']\n",
+    "            'values': ['CNN_5_dropout']\n",
     "        },\n",
     "        'in_out_channel': {\n",
     "            'values': [43]\n",
@@ -2995,6 +3013,12 @@
     "        'l2_reg': {\n",
     "            'min': 0.00001,\n",
     "            'max': 0.1,\n",
+    "        },\n",
+    "        'dropout1': {\n",
+    "            'values': [0.01, 0.15, 0.5, 0.8]\n",
+    "        },\n",
+    "        'dropout2': {\n",
+    "            'values': [0.01, 0.15, 0.5, 0.8]\n",
     "        },\n",
     "        'optimizers': {\n",
     "            'values': ['Adam']\n",
@@ -3021,10 +3045,12 @@
     "    fc_nodes1 = wandb.config.fc_nodes1\n",
     "    fc_nodes2 = wandb.config.fc_nodes2\n",
     "    l2_reg = wandb.config.l2_reg\n",
+    "    dropout1 = wandb.config.dropout1\n",
+    "    dropout2 = wandb.config.dropout2\n",
     "    optimizers = wandb.config.optimizers\n",
     "\n",
-    "    if models == \"CNN_5\":\n",
-    "        model = CNN_5_dropout(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
+    "    if models == \"CNN_5_dropout\":\n",
+    "        model = CNN_5_dropout(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2, droprate1=dropout1, droprate2=dropout2).to(device)\n",
     "    \n",
     "    # get dataloader\n",
     "    trainloader, valloader = get_dataloader(batch_size=batch_size)\n",
@@ -3032,6 +3058,108 @@
     "    # create optimizer\n",
     "    if optimizers == \"Adam\":\n",
     "        optimizer = optim.Adam(model.parameters(), lr = lr, weight_decay=l2_reg)\n",
+    "        \n",
+    "    # create criterion\n",
+    "    criterion_crossentropy = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # train model\n",
+    "        train_loss, train_acc = train_modell(model, trainloader, criterion=criterion_crossentropy, optimizer=optimizer)\n",
+    "        # test model\n",
+    "        val_loss, val_acc = test_model(model, valloader, criterion=criterion_crossentropy)\n",
+    "\n",
+    "        # log metrics to wandb\n",
+    "        wandb.log({\"Train Loss\": train_loss, \"Train Accuracy\": train_acc, \"Validation Loss\": val_loss, \"Validation Accuracy\": val_acc, \"epoch\": epoch + 1})\n",
+    "\n",
+    "# run the sweep\n",
+    "wandb.agent(sweep_id, function=wandb_train, count = 25)\n",
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sweep mit unterschiedlichen Lernraten ohne Regularisierung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define sweep configuration (Nutzen von ADAM ohne BN und ohne und mit Regularisierung)\n",
+    "sweep_config = {\n",
+    "    'method': 'bayes', \n",
+    "    'metric': {\n",
+    "        'name': 'Validation Accuracy',\n",
+    "        'goal': 'maximize'\n",
+    "    },\n",
+    "    'parameters': {\n",
+    "        'lr': {\n",
+    "            'min': 0.00001,\n",
+    "            'max': 0.01\n",
+    "        },\n",
+    "        'batch_size': {\n",
+    "            'values': [64]\n",
+    "        },\n",
+    "        'num_epochs': {\n",
+    "            'values': [30]\n",
+    "        },\n",
+    "        'model': {\n",
+    "            'values': ['CNN_5']\n",
+    "        },\n",
+    "        'in_out_channel': {\n",
+    "            'values': [43]\n",
+    "        },\n",
+    "        'kernel_size': {\n",
+    "            'values': [5]\n",
+    "        },\n",
+    "        'pool_size': {\n",
+    "            'values': [2]\n",
+    "        },\n",
+    "        'fc_nodes1': {\n",
+    "            'values': [95]\n",
+    "        },\n",
+    "        'fc_nodes2': {\n",
+    "            'values': [54]\n",
+    "        },\n",
+    "        'optimizers': {\n",
+    "            'values': ['Adam']\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# create a sweep\n",
+    "sweep_id = wandb.sweep(sweep_config, project=\"del-mc1\")\n",
+    "\n",
+    "# define the train function for wandb\n",
+    "def wandb_train():\n",
+    "    # initialize a new wandb run\n",
+    "    wandb.init()\n",
+    "\n",
+    "    # get the hyperparameters from wandb\n",
+    "    lr = wandb.config.lr\n",
+    "    batch_size = wandb.config.batch_size\n",
+    "    num_epochs = wandb.config.num_epochs\n",
+    "    models = wandb.config.model\n",
+    "    in_out_channel = wandb.config.in_out_channel\n",
+    "    kernel_size = wandb.config.kernel_size\n",
+    "    pool_size = wandb.config.pool_size\n",
+    "    fc_nodes1 = wandb.config.fc_nodes1\n",
+    "    fc_nodes2 = wandb.config.fc_nodes2\n",
+    "    optimizers = wandb.config.optimizers\n",
+    "\n",
+    "    if models == \"CNN_5\":\n",
+    "        model = CNN_5(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
+    "    \n",
+    "    # get dataloader\n",
+    "    trainloader, valloader = get_dataloader(batch_size=batch_size)\n",
+    "\n",
+    "    # create optimizer\n",
+    "    if optimizers == \"Adam\":\n",
+    "        optimizer = optim.Adam(model.parameters(), lr = lr)\n",
     "        \n",
     "    # create criterion\n",
     "    criterion_crossentropy = nn.CrossEntropyLoss()\n",
