--- a/del-Minichallenge-1/del-testmodels.ipynb
+++ b/del-Minichallenge-1/del-testmodels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +227,315 @@
     "# print the model architecture\n",
     "print(\"CNN with 3 Convolutional Layers and 3 Fully Connected Layers\")\n",
     "summary(model_cnn_4, (3, 32, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN_3_2 with 5 Convolutional Layers and 3 Fully Connected Layers\n",
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 16, 34, 34]           1,216\n",
+      "         MaxPool2d-2           [-1, 16, 17, 17]               0\n",
+      "            Conv2d-3           [-1, 16, 19, 19]           6,416\n",
+      "         MaxPool2d-4             [-1, 16, 9, 9]               0\n",
+      "            Conv2d-5           [-1, 16, 11, 11]           6,416\n",
+      "         MaxPool2d-6             [-1, 16, 5, 5]               0\n",
+      "            Conv2d-7             [-1, 16, 7, 7]           6,416\n",
+      "         MaxPool2d-8             [-1, 16, 3, 3]               0\n",
+      "            Conv2d-9             [-1, 16, 5, 5]           6,416\n",
+      "        MaxPool2d-10             [-1, 16, 2, 2]               0\n",
+      "           Linear-11                  [-1, 120]           7,800\n",
+      "           Linear-12                   [-1, 84]          10,164\n",
+      "           Linear-13                   [-1, 10]             850\n",
+      "================================================================\n",
+      "Total params: 45,694\n",
+      "Trainable params: 45,694\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 0.26\n",
+      "Params size (MB): 0.17\n",
+      "Estimated Total Size (MB): 0.45\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CNN_3_2(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # first convolutional layer\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # max pooling layer\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2) # 2x2 max pooling\n",
+    "        # second convolutional layer\n",
+    "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # third convolutional layer\n",
+    "        self.conv3 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # fourth convolutional layer\n",
+    "        self.conv4 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # add fifth convolutional layer\n",
+    "        self.conv5 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # first fully connected layer\n",
+    "        self.fc1 = nn.Linear(in_features=16*2*2, out_features=120)\n",
+    "        # second fully connected layer\n",
+    "        self.fc2 = nn.Linear(in_features=120, out_features=84)\n",
+    "        # third fully connected layer\n",
+    "        self.fc3 = nn.Linear(in_features=84, out_features=10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # first convolutional layer\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # second convolutional layer\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # third convolutional layer\n",
+    "        x = self.conv3(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # fourth convolutional layer\n",
+    "        x = self.conv4(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # add fifth convolutional layer\n",
+    "        x = self.conv5(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # flatten the output of the convolutional layers\n",
+    "        x = x.view(-1, 16*2*2)\n",
+    "        # first fully connected layer\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        # second fully connected layer\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "        # third fully connected layer\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "# creating model objects and get the number of parameters\n",
+    "model_cnn_3_2 = CNN_3_2().to(device)\n",
+    "\n",
+    "# print the model architecture\n",
+    "print(\"CNN_3_2 with 5 Convolutional Layers and 3 Fully Connected Layers\")\n",
+    "summary(model_cnn_3_2, (3, 32, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN_3_1 with 4 Convolutional Layers and 3 Fully Connected Layers, max pooling 2x2, padding = 3, kernel size = 5\n",
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 16, 36, 36]           1,216\n",
+      "         MaxPool2d-2           [-1, 16, 18, 18]               0\n",
+      "            Conv2d-3           [-1, 16, 22, 22]           6,416\n",
+      "         MaxPool2d-4           [-1, 16, 11, 11]               0\n",
+      "            Conv2d-5           [-1, 16, 15, 15]           6,416\n",
+      "         MaxPool2d-6             [-1, 16, 7, 7]               0\n",
+      "            Conv2d-7           [-1, 16, 11, 11]           6,416\n",
+      "         MaxPool2d-8             [-1, 16, 5, 5]               0\n",
+      "            Linear-9                  [-1, 120]          48,120\n",
+      "           Linear-10                   [-1, 84]          10,164\n",
+      "           Linear-11                   [-1, 10]             850\n",
+      "================================================================\n",
+      "Total params: 79,598\n",
+      "Trainable params: 79,598\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 0.32\n",
+      "Params size (MB): 0.30\n",
+      "Estimated Total Size (MB): 0.64\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CNN_3_1(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # first convolutional layer\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=5, padding=4)\n",
+    "        # max pooling layer\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2) # 2x2 max pooling\n",
+    "        # second convolutional layer\n",
+    "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=4)\n",
+    "        # third convolutional layer\n",
+    "        self.conv3 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=4)\n",
+    "        # fourth convolutional layer\n",
+    "        self.conv4 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=4)\n",
+    "        # first fully connected layer\n",
+    "        self.fc1 = nn.Linear(in_features=16*5*5, out_features=120)\n",
+    "        # second fully connected layer\n",
+    "        self.fc2 = nn.Linear(in_features=120, out_features=84)\n",
+    "        # third fully connected layer\n",
+    "        self.fc3 = nn.Linear(in_features=84, out_features=10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # first convolutional layer\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # second convolutional layer\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # third convolutional layer\n",
+    "        x = self.conv3(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # fourth convolutional layer\n",
+    "        x = self.conv4(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # flatten the output of the convolutional layers\n",
+    "        x = x.view(-1, 16*5*5)\n",
+    "        # first fully connected layer\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        # second fully connected layer\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "        # third fully connected layer\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "# creating model objects and get the number of parameters\n",
+    "model_cnn_3_1 = CNN_3_1().to(device)\n",
+    "\n",
+    "# print the model architecture\n",
+    "print(\"CNN_3_1 with 4 Convolutional Layers and 3 Fully Connected Layers, max pooling 2x2, padding = 3, kernel size = 5\")\n",
+    "summary(model_cnn_3_1, (3, 32, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN_3_3 with 6 Convolutional Layers and 3 Fully Connected Layers\n",
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 16, 34, 34]           1,216\n",
+      "         MaxPool2d-2           [-1, 16, 17, 17]               0\n",
+      "            Conv2d-3           [-1, 16, 19, 19]           6,416\n",
+      "         MaxPool2d-4             [-1, 16, 9, 9]               0\n",
+      "            Conv2d-5           [-1, 16, 11, 11]           6,416\n",
+      "         MaxPool2d-6             [-1, 16, 5, 5]               0\n",
+      "            Conv2d-7             [-1, 16, 7, 7]           6,416\n",
+      "         MaxPool2d-8             [-1, 16, 3, 3]               0\n",
+      "            Conv2d-9             [-1, 16, 5, 5]           6,416\n",
+      "        MaxPool2d-10             [-1, 16, 2, 2]               0\n",
+      "           Conv2d-11             [-1, 16, 4, 4]           6,416\n",
+      "        MaxPool2d-12             [-1, 16, 2, 2]               0\n",
+      "           Linear-13                  [-1, 120]           7,800\n",
+      "           Linear-14                   [-1, 84]          10,164\n",
+      "           Linear-15                   [-1, 10]             850\n",
+      "================================================================\n",
+      "Total params: 52,110\n",
+      "Trainable params: 52,110\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 0.26\n",
+      "Params size (MB): 0.20\n",
+      "Estimated Total Size (MB): 0.47\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CNN_3_3(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # first convolutional layer\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # max pooling layer\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2) # 2x2 max pooling\n",
+    "        # second convolutional layer\n",
+    "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # third convolutional layer\n",
+    "        self.conv3 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # fourth convolutional layer\n",
+    "        self.conv4 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # add fifth convolutional layer\n",
+    "        self.conv5 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # add sixth convolutional layer\n",
+    "        self.conv6 = nn.Conv2d(in_channels=16, out_channels=16, kernel_size=5, padding=3)\n",
+    "        # first fully connected layer\n",
+    "        self.fc1 = nn.Linear(in_features=16*2*2, out_features=120)\n",
+    "        # second fully connected layer\n",
+    "        self.fc2 = nn.Linear(in_features=120, out_features=84)\n",
+    "        # third fully connected layer\n",
+    "        self.fc3 = nn.Linear(in_features=84, out_features=10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # first convolutional layer\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # second convolutional layer\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # third convolutional layer\n",
+    "        x = self.conv3(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # fourth convolutional layer\n",
+    "        x = self.conv4(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # add fifth convolutional layer\n",
+    "        x = self.conv5(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # add sixth convolutional layer\n",
+    "        x = self.conv6(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        # flatten the output of the convolutional layers\n",
+    "        x = x.view(-1, 16*2*2)\n",
+    "        # first fully connected layer\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        # second fully connected layer\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "        # third fully connected layer\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "# creating model objects and get the number of parameters\n",
+    "model_cnn_3_3 = CNN_3_3().to(device)\n",
+    "\n",
+    "# print the model architecture\n",
+    "print(\"CNN_3_3 with 6 Convolutional Layers and 3 Fully Connected Layers\")\n",
+    "summary(model_cnn_3_3, (3, 32, 32))"
    ]
   }
  ],
